# rsjvm

./: .gitignore  COMPARISON.md  Cargo.toml  QUICKSTART.md  README.md  RUN_EXAMPLES.md  notes.md
.claude/: claude.md
docs/: constant_pool_design.md  iload_implementation.md  instruction_cheatsheet.md  jvm_bootstrap.md  jvm_components_roadmap.md  jvm_execution_engine.md  jvm_startup.md  stack_vs_register.md  using_main_method.md
examples/: BYTECODE_ANALYSIS.md  Calculator.java  ConstantTest.java  HelloPrint.java  HelloPrintln.java  HelloWorld.java  IfTest.java  MainTest.java  PrintOne.java  ReturnOne.java  Simple.java  SimpleMain.java  TestInvokeStatic.java  TestReturn.java  debug_simple.rs  test_interpreter.rs  test_option_size.rs  test_println.rs  test_sizeof.rs  visualize_cp.rs
src/: lib.rs  main.rs
src/classfile/: attribute.rs  constant_pool.rs  mod.rs  parser.rs
src/classloader/: mod.rs
src/gc/: mod.rs
src/interpreter/: instructions.rs  mod.rs
src/runtime/: frame.rs  heap.rs  metaspace.rs  mod.rs  thread.rs
tests/: interpreter_test.rs  run_test.rs  test_invokestatic.rs
